--- a/index.html
+++ b/index.html
@@ -1,23 +1,96 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>PhoenixNode Live Dashboard</title>
-  <meta charset="UTF-8">
-  <script>
-    async function loadData() {
-      const res = await fetch('./PhoenixNode_DashboardFeed.json');
-      const data = await res.json();
-      document.getElementById("output").innerText = JSON.stringify(data, null, 2);
-    }
-    window.onload = loadData;
-  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>🧠 PhoenixNode Dashboard</title>
   <style>
-    body { font-family: monospace; background: #0d1117; color: #c9d1d9; padding: 20px; }
-    pre { background: #161b22; padding: 10px; border-radius: 5px; }
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #0e1117;
+      color: #d1d5db;
+    }
+    header {
+      background-color: #1f2937;
+      padding: 1rem;
+      text-align: center;
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: #f472b6;
+    }
+    .container {
+      max-width: 900px;
+      margin: 2rem auto;
+      background-color: #1e293b;
+      border-radius: 10px;
+      padding: 1.5rem;
+      box-shadow: 0 0 10px #00000050;
+    }
+    .section {
+      margin-bottom: 2rem;
+    }
+    h2 {
+      border-bottom: 2px solid #334155;
+      padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
+      color: #93c5fd;
+    }
+    .item {
+      margin-bottom: 1rem;
+      padding: 0.8rem;
+      background-color: #0f172a;
+      border-left: 4px solid #38bdf8;
+      border-radius: 6px;
+    }
+    .key {
+      font-weight: bold;
+      color: #facc15;
+    }
+    .value {
+      margin-left: 0.5rem;
+    }
+    .footer {
+      text-align: center;
+      color: #64748b;
+      margin-top: 2rem;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body>
-  <h1>🧠 PhoenixNode Live Feed</h1>
-  <pre id="output">Loading...</pre>
+  <header>🧠 PhoenixNode Live Dashboard</header>
+  <div class="container" id="dashboard">
+    <div class="section">
+      <h2>Status Feed</h2>
+      <div class="item"><span class="key">Loading...</span></div>
+    </div>
+  </div>
+  <div class="footer">Autorefreshes every 15 seconds • GitHub Pages Powered</div>
+
+  <script>
+    async function fetchData() {
+      try {
+        const res = await fetch('PhoenixNode_DashboardFeed.json');
+        const data = await res.json();
+        const container = document.getElementById('dashboard');
+        const section = container.querySelector('.section');
+        section.innerHTML = '<h2>Status Feed</h2>';
+
+        Object.entries(data).forEach(([key, value]) => {
+          if (typeof value === 'object') {
+            section.innerHTML += `<div class="item"><span class="key">${key}</span><div class="value">${JSON.stringify(value, null, 2)}</div></div>`;
+          } else {
+            section.innerHTML += `<div class="item"><span class="key">${key}:</span><span class="value">${value}</span></div>`;
+          }
+        });
+      } catch (err) {
+        document.getElementById('dashboard').innerHTML = '<div class="item">❌ Error loading dashboard data.</div>';
+      }
+    }
+
+    fetchData();
+    setInterval(fetchData, 15000);
+  </script>
 </body>
 </html>
