--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <script>
     async function loadStatus() {
-      const res = await fetch('status.json');
+      const res = await fetch('data.json');
       const data = await res.json();
 
       const container = document.getElementById('feed');
